--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -50,14 +50,22 @@ body {
       color: $dark-blue;
     }
     &-btn {
+      position: relative;
       margin-bottom: 0.5em;
       background: none;
       border: none;
       color: $grey;
-      border-bottom: 1px solid $grey;
       font-size: 1.6rem;
       transition: color 0.3s, border-bottom 0.3s;
       cursor: pointer;
+      &::before {
+        width: 100%;
+        height: 0.1rem;
+        background-color: $grey;
+        bottom: -.1rem;
+        position: absolute;
+        content: "";
+      }
       &:hover {
         color: $dark-blue;
         border-bottom: 1px solid $dark-blue;
